Fix notice spacing on table views
Summary: When a notice is in a table view in a two column layout, reset the margins.

Test Plan: Visit OwnerDetails with no paths set.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D17792

--- a/webroot/rsrc/css/aphront/table-view.css
+++ b/webroot/rsrc/css/aphront/table-view.css
@@ -29,6 +29,10 @@
   border-bottom: 1px solid {$thinblueborder};
 }
 
+.phui-two-column-view .aphront-table-notice .phui-info-view {
+  margin: 0;
+}
+
 .aphront-table-view tr.alt {
   background: {$lightgreybackground};
 }
